add readme and remove log grizzly